Avoid colliding with other plugins. Implement /buy menu.